# EmbeddedSystemsCoursework

./: .gitignore  .gitmodules  .gitmodules.swp  CMakeLists.txt  LcdDisplay.c  README.md
.github/workflows/: run_RTC_tests.yml  run_string_tests.yml  run_thermometer_tests.yml  run_unit_tests.yml
Coursework2.X/: ButtonsDriver.c  ButtonsDriver.h  ButtonsInterface.c  ButtonsInterface.h  Delay.c  Delay.h  LCDPanelDriver.c  LCDPanelDriver.h  LCDPanelInterface.c  LCDPanelInterface.h  NumberConverter.c  NumberConverter.h  RealTimeClockConversions.c  RealTimeClockConversions.h  RealTimeClockDriver.c  RealTimeClockDriver.h  RealTimeClockInterface.c  RealTimeClockInterface.h  SounderDriver.c  SounderDriver.h  SounderInterface.c  SounderInterface.h  StringUtils.c  StringUtils.h  ThermometerDriver.c  ThermometerDriver.h  ThermometerInterface.c  ThermometerInterface.h  buttons.c  buttons.h  globals.h  main.c  main.h  mode_functions.c  timer.c  timer.h
Coursework2.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
MPLAB_Project/: ButtonDriver.c  ButtonDriver.h  ButtonInterface.c  Delay.c  HeaterConfigManager.c  HeaterConfigManager.h  LCDPanelDriver.c  LCDPanelInterface.c  MathsUtils.h  Mode.c  Mode.h  ModeErrors.c  ModeHome.c  ModeRefreshes.c  ModeRefreshes.h  ModeSetColdTimer.c  ModeSetColdTimer.h  ModeSetDate.c  ModeSetDate.h  ModeSetFakeTemp.c  ModeSetFakeTemp.h  ModeSetHotTimer.c  ModeSetHotTimer.h  ModeSetTime.c  ModeSetTime.h  ModeSetTrigTemp.c  ModeSetTrigTemp.h  NumberConverter.c  RealTimeClockConversions.h  RealTimeClockDriver.c  RealTimeClockDriver.h  RealTimeClockInterface.c  RealTimeClockInterface.h  SevenSeg.c  SounderDriver.c  SounderDriver.h  SounderInterface.c  SounderInterface.h  StringUtils.c  StringUtils.h  (+4 more)
MPLAB_Project/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
NumberConverter/: NumberConverter.c
ThermometerDriver/: ThermometerDriver.h  ThermometerInterface.c
docs/Designs/: SmartHouseHeatingControl.ncp
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-local-default.mk  configurations.xml
unit_testing/: CMakeLists.txt  build.sh  run_tests.sh
unit_testing/unit_tests/: CMakeLists.txt  RTC_Tests.cpp  StringUtils_Tests.cpp  Thermometer_Tests.cpp  main.cpp
(+3 files in other folders)
